# meta-inspector

./: Cargo.toml  README.md  README.txt  meta-inspector.py
src/: lib.rs  main.rs
