[package]
name = "meta-inspector"
version = "0.1.0"
edition = "2021"

[lib]
name = "metadata_extractor"
crate-type = ["cdylib"]

[dependencies]
kamadak-exif = "0.6"
lofty = "0.22"
pyo3 = { version = "0.21", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
md5 = "0.7"
walkdir = "2.4"
chrono = { version = "0.4", features = ["serde"] }
zip = "0.6"

[[bin]]
name = "metadata_extractor"
path = "src/main.rs"
